# majsa_main

./: CMakeLists.txt
src/: AgariChecker.c  AgariChecker.h  Calculator.c  Calculator.h  NewDef.h  Sort.c  Sort.h  YakuChecker.c  YakuChecker.h  main.c  main.h  majsa.c  majsa.h
